# IS-project

./: README.md
IS-project-main/: .gitignore  pyproject.toml
IS-project-main/diagrams/: README.md  architecture.mmd  protocol_sequence.mmd
IS-project-main/docker/: Dockerfile  docker-compose.yml
IS-project-main/docs/: README.md  architecture.md  config.example.toml  deployment.md  limitations.md  message_formats.md  protocol_steps.md  security_assumptions.md  threat_model.md
IS-project-main/scripts/: bootstrap.ps1  demo_end_to_end.py  run_all.ps1  run_all.py  run_tests.ps1  simulate_attack.py
IS-project-main/src/: __init__.py
IS-project-main/src/common/: __init__.py  config.py  crypto_utils.py  fuzzy.py  hashing.py  logging_utils.py  serialization.py  types.py
IS-project-main/src/device/: __init__.py  client.py  storage.py
IS-project-main/src/encryption/: __init__.py  crypto.py  matrix_cipher.py
IS-project-main/src/ml/: __init__.py  artifacts.py  demo_model.py  device_harness.py
IS-project-main/src/modeling/: __init__.py  attack_benchmarks.py  crp.py  logistic.py  metrics.py  persistence.py  pipeline.py  registry.py  split.py
IS-project-main/src/protocol/: __init__.py  authentication.py  messages.py  (+4 more)
IS-project-main/tests/: test_authentication_flow.py  test_common.py  test_encryption_and_auth.py  test_ml_integration.py  test_modeling_pipeline.py  test_parameter_transmission.py  test_parameter_transmission_integration.py  test_protocol_flow.py  test_puf_simulators.py  test_registration_flow.py  test_review_readiness.py  test_security_improvements.py
(+14 files in other folders)
