[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puf-ai-protection-prototype"
version = "0.1.0"
description = "Prototype scaffold for PUF-based AI model protection"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Prototype Team"}
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
